--- a/2 - Påske/Easter/wwwroot/index.html
+++ b/2 - Påske/Easter/wwwroot/index.html
@@ -1,93 +1,39 @@
 ﻿<!DOCTYPE html>
-<html>
-
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <link rel="stylesheet" href="StyleSheet.css" type="text/css" />
     <script type="text/javascript" src="lib/signalr.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
             crossorigin="anonymous"></script>
-    <title>WhiteBoard</title>
-    <style>
-        canvas {
-            cursor: crosshair;
-            border: 1px solid #000000;
-        }
-    </style>
+    <script src="JavaScript.js"></script>
+    <title>WebSocket Pong</title>
 </head>
 
 <body>
-<canvas id="canvas" width="800" height="500" onmouseout="clearMousePositions()"></canvas>
-<select id="color">
-    <option value="black">Black</option>
-    <option value="red">Red</option>
-    <option value="yellow">Yellow</option>
-    <option value="green">Green</option>
-    <option value="blue">Blue</option>
-</select>
-<div id="output"></div>
-<script>
-    var canvas = document.getElementById('canvas');
-    var ctx = canvas.getContext('2d');
-    var canvasx = $(canvas).offset().left;
-    var canvasy = $(canvas).offset().top;
-    var last_mousex = last_mousey = 0;
-    var mousex = mousey = 0;
-    var mousedown = false;
+    <header>
+    <h1>WebSocket Pong</h1>
+    </header>
 
-    $(canvas).on('mousedown', function (e) {
-        last_mousex = mousex = parseInt(e.clientX - canvasx);
-        last_mousey = mousey = parseInt(e.clientY - canvasy);
-        mousedown = true;
-    });
+    <main>
+        <table>
+            <tr>
+                <td>Player 1 score: <span id="player1"></span></td>
+                <td>Player 2 score: <span id="player2"></span></td>
+            </tr>
+        </table>
 
-    $(canvas).on('mouseup', function (e) {
-        mousedown = false;
-    });
+    <canvas id="myCanvas" width="500" height="500">
+        Your browser does not support the HTML5 canvas tag.
+    </canvas>
+    
+    <br>
+    
+    <input id="open" type="button" value="Open Connection" />
+    <input id="close" type="button" value="Close Connection" />
+    </main>
 
-    var drawCanvas = function (prev_x, prev_y, x, y, clr) {
-        ctx.beginPath();
-        console.log("X: " + x + " Y: " + y);
-        ctx.globalCompositeOperation = 'source-over';
-        ctx.strokeStyle = clr
-        ctx.lineWidth = 3;
-        ctx.moveTo(prev_x, prev_y);
-        ctx.lineTo(x, y);
-        ctx.lineJoin = ctx.lineCap = 'round';
-        ctx.stroke();
-    };
-
-    $(canvas).on('mousemove', function (e) {
-        mousex = parseInt(e.clientX - canvasx);
-        mousey = parseInt(e.clientY - canvasy);
-        var clr = $('select[id=color]').val()
-
-        if ((last_mousex > 0 && last_mousey > 0) && mousedown) {
-            drawCanvas(mousex, mousey, last_mousex, last_mousey, clr);
-            connection.invoke('move', last_mousex, last_mousey, mousex, mousey, clr);
-        }
-        last_mousex = mousex;
-        last_mousey = mousey;
-
-        $('#output').html('current: ' + mousex + ', ' + mousey + '<br/>last: ' + last_mousex + ', ' + last_mousey + '<br/>mousedown: ' + mousedown);
-    });
-
-    var connection = new signalR.HubConnectionBuilder()
-        .withUrl('/game')
-        .build();
-
-    connection.on('move', function (prev_x, prev_y, x, y, clr) {
-        console.log("X: " + x + " Y: " + y);
-        drawCanvas(prev_x, prev_y, x, y, clr);
-    });
-    connection.start();
-
-    clearMousePositions = function () {
-        last_mousex = 0;
-        last_mousey = 0;
-    }
-
-</script>
+    <footer id="log">
+    </footer>
 </body>
-
 </html>
