--- a/2 - Påske/Easter/wwwroot/index.html
+++ b/2 - Påske/Easter/wwwroot/index.html
@@ -13,31 +13,48 @@
 </head>
 
 <body>
-<header>
-    <h1>WebSocket Pong</h1>
+<header style="background: deepskyblue">
+    <h1>Easter egg delivery</h1>
 </header>
 
-<main>
+<main style="background: forestgreen">
     <table>
         <tr>
-            <td>Player 1 score: <span id="player1"></span></td>
-        </tr>
-        <tr>
-            <td>Player 2 score: <span id="player2"></span></td>
+            <td>
+                <img id="bunny" width="20%" src="/images/bunny.png">
+                <br>
+                Player 1 score:
+                <br>
+                <span id="player1">0</span>
+            </td>
+            <td style="height: 60px; width: 200px;">
+                <input id="open" type="image" value="Open Connection" width="45%" src="./images/start.png"/>
+                <input id="close" type="image" value="Close Connection" width="45%" src="./images/stop.png"/>
+            </td>
+            <td>
+                <img id="fox" width="20%" src="/images/fox.png">
+                <br>
+                Player 2 score:
+                <br>
+                <span id="player2">0</span>
+            </td>
         </tr>
     </table>
 
-    <canvas id="myCanvas" width="500" height="500">
+    <canvas id="myCanvas" width="500" height="500" style="background: url('./images/grass.jpg')">
         Your browser does not support the HTML5 canvas tag.
     </canvas>
 
     <br>
 
-    <input id="open" type="button" value="Open Connection"/>
-    <input id="close" type="button" value="Close Connection"/>
+    
 </main>
 
 <footer id="log">
 </footer>
 </body>
+
+<img id="ball" width="300" height="300" hidden src="/images/floral.png">
+<img id="children" width="300" height="300" hidden src="/images/children.png">
+
 </html>
