--- a/2 - Påske/Easter/wwwroot/index.html
+++ b/2 - Påske/Easter/wwwroot/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-<header style="background: deepskyblue">
+<header>
     <h1>Easter egg delivery</h1>
 </header>
 
-<main style="background: forestgreen">
+<main>
     <table>
         <tr>
             <td>
@@ -44,17 +44,9 @@
     <canvas id="myCanvas" width="500" height="500" style="background: url('./images/grass.jpg')">
         Your browser does not support the HTML5 canvas tag.
     </canvas>
-
-    <br>
-
-    
 </main>
-
+<img id="ball" width="300" height="300" hidden src="/images/floral.png">
 <footer id="log">
 </footer>
 </body>
-
-<img id="ball" width="300" height="300" hidden src="/images/floral.png">
-<img id="children" width="300" height="300" hidden src="/images/children.png">
-
 </html>
